[package]
name = "leafguard"
version = "0.1.0"
edition = "2024"

[dependencies]
toml = "0.8"
# Leitura de arquivo .toml

tray-icon = "0.18"
# Coloca um ícone perto do relógio (Linux/Windows) com menu clicável.

sysinfo = "0.32"
# Lista programas abertos (l3afpad, notepad, etc). Como o "Task Manager".

tokio = { version = "1", features = ["full"] }
# Permite rodar várias tarefas ao mesmo tempo (daemon + tray icon juntos).

reqwest = { version = "0.12", features = ["json"] }
# Faz upload pro Drive. Como "curl" em Rust.

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

chrono = "0.4"

directories = "5.0"
# Encontra ~/.config/leafguard automaticamente (Linux/Windows).
